package Osblow.HexProto;
// message person { 
//   required string name = 1; 
//   optional int32 id = 2; 
//   optional string email = 3; 
//   enum phone_type { 
//     mobile = 0; 
//     home = 1; 
//     work = 2; 
//   } 
//   message phone_number { 
//     required string number = 1; 
//     optional phone_type type = 2 [default = home]; 
//   } 
//   repeated phone_number phone = 4; 
//   repeated int32 test_packed = 5 [packed = true];
//   optional int32 test_deprecated = 6 [deprecated = true];
//   optional int32 foreach = 7;
// }
// message opaque_message_list { repeated bytes messages_list=1; }

message RoomBroadCast {
  required string address = 1;
  required int32 port = 2;

  message RoomConf {
    required string name = 1;
    required int32 maxMemCount = 2;
    required bool forceKill = 3;

    enum MapType {
      Small = 0;
      Middle = 1;
      Big = 2;
    }
    required MapType mapType = 4;
  }
  required RoomConf roomConf = 3;
}